# CIRISHome

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  =6.0.0  CLAUDE.md  Dockerfile.test  INSTALLATION.md  NO_MEDICAL_CODE  README.md  deploy.sh  docker-compose.override.yml  docker-compose.web.yml  docker-compose.yml  hacs.json  main.py  mypy.ini  pyproject.toml  pytest.ini  repository.json  requirements-test.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
CIRISVoice/: test_raw_tcp.py
CIRISVoice/src/: ciris_sdk_client.py
ciris-agent/: CLAUDE.md  Dockerfile  build-assets.sh  build.yaml  config.yaml  nginx.conf  run.sh
ciris-agent/www/: ciris-web.js  index.html
ciris-web/: Dockerfile  config.yaml
ciris-web/www/: ciris-web.js  index.html
ciris_home/: Dockerfile  __init__.py  __main__.py  cli.py  discovery.py  installer.py  oauth.py  webserver.py
config/: deployment.yaml  voice_pe_pucks.yml
custom_components/ciris/: __init__.py  agent.py  ciris_ha_client.py  config_flow.py  const.py  manifest.json  strings.json
docker/voice/: Dockerfile
examples/: ha_automations.yaml
ha-addon/: repository.yaml
ha-addon/ciris-web/: Dockerfile  build-assets.sh  config.yaml  run.sh
scripts/: deploy-addon.sh  deploy-agent-wheel.sh  download_models.sh  ha_yellow_jetson_setup.sh  jetson-simulator.py  rebuild-mobile-web.sh  release.sh  validate_addon.py
stubs/: pytest_homeassistant.pyi  torch.pyi  transformers.pyi  whisper.pyi
stubs/TTS/: __init__.pyi  (+1 more)
tests/: conftest.py  test_home_enabler.py  test_jetson_integration.py  test_sensor_filtering.py  test_voice_pe_pipeline.py  test_voice_pipeline.py  test_wisdom_modules.py
tools/: grace_home
(+49 files in other folders)
